--- a/src/components/main.html
+++ b/src/components/main.html
@@ -1,4 +1,4 @@
-<main>
-  <h1>Welcome to my blog</h1>
-  <!--c:button-->
+<main class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
+  <div class="border border-2 p-8 text-center">next bucket items</div>
+  <div class="mt-4 border border-2 p-8 text-center">all items</div>
 </main>
