--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,7 +1,5 @@
-<footer class="bg-white">
-  <div
-    class="max-w-7xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8"
-  >
+<footer class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8 bg-white">
+  <div class="py-12 md:flex md:items-center md:justify-between">
     <div class="mt-8 md:mt-0 md:order-1">
       <p class="text-center text-base text-gray-400">&copy; 2021 FTLM. All rights reserved.</p>
     </div>
