--- a/src/components/head.html
+++ b/src/components/head.html
@@ -4,5 +4,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bucket</title>
 
-  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
