Changed the timeline items to components.

--- a/src/components/timeline.html
+++ b/src/components/timeline.html
@@ -18,193 +18,10 @@
       <div class="w-4 h-4 bg-gray-200 transform rotate-45 translate-y-1 rounded"></div>
     </div>
     <component name="tl-block-year" props="Today" />
-    <div
-      class="
-        relative
-        mb-4
-        sm:mb-6
-        transform
-        transition-all
-        translate-y-12
-        ease-out
-        duration-500
-        opacity-0
-      "
-      data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
-    >
-      <div
-        class="
-          w-4
-          sm:w-6
-          md:w-8
-          h-0.5
-          sm:h-1
-          bg-gray-200
-          absolute
-          z-30
-          left-0
-          top-1/2
-          transform
-          -translate-y-1/2 -translate-x-full
-        "
-      ></div>
-      <div class="border rounded-md sm:rounded-xl overflow-hidden">
-        <div>
-          <img
-            src="https://images.unsplash.com/photo-1581889470536-467bdbe30cd0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&ar=2:1&fit=crop&w=1000&q=80"
-          />
-        </div>
-        <div class="p-4 sm:p-6 relative">
-          <span
-            class="
-              absolute
-              top-4
-              right-4
-              font-medium
-              text-sm
-              sm:text-base
-              bg-yellow-100
-              text-yellow-700
-              py-1
-              px-2
-              rounded-md
-            "
-            >Fitness</span
-          >
-          <div class="font-bold sm:text-xl">Run a marathon</div>
-          <div class="sm:mt-1 text-gray-500 sm:text-lg">Finishing a full marathon.</div>
-        </div>
-      </div>
-    </div>
-    <div
-      class="
-        relative
-        mb-4
-        sm:mb-6
-        transform
-        transition-all
-        translate-y-12
-        ease-out
-        duration-500
-        opacity-0
-      "
-      data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
-    >
-      <div
-        class="
-          w-4
-          sm:w-6
-          md:w-8
-          h-0.5
-          sm:h-1
-          bg-gray-200
-          absolute
-          z-30
-          left-0
-          top-1/2
-          transform
-          -translate-y-1/2 -translate-x-full
-        "
-      ></div>
-      <div class="border rounded-md sm:rounded-xl overflow-hidden">
-        <div class="p-4 sm:p-6">
-          <div class="font-bold sm:text-xl">Visit the Himalaya</div>
-          <div class="sm:mt-1 text-gray-500 sm:text-lg">Go to Nepal and see the mountains.</div>
-          <div class="pt-4 text-sm sm:text-base">
-            <span class="font-medium bg-blue-100 text-blue-700 py-1 px-2 rounded-md">Travel</span>
-            <span class="ml-2 text-gray-700">24. Sept 2021</span>
-          </div>
-        </div>
-      </div>
-    </div>
+    <component name="timeline-item-picture" props="Run a marathon;Finishing a full marathon;yellow;Fitness;12.12.2021;Marathon.jpg" />
+    <component name="timeline-item" props="Visit the Himalaya;Go to Nepal and see the mountains;blue;Travel;24. Sept 2021" />
     <component name="tl-block-year" props="2021" />
-    <div
-      class="
-        relative
-        mb-4
-        sm:mb-6
-        transform
-        transition-all
-        translate-y-12
-        ease-out
-        duration-500
-        opacity-0
-      "
-      data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
-    >
-      <div
-        class="
-          w-4
-          sm:w-6
-          md:w-8
-          h-0.5
-          sm:h-1
-          bg-gray-200
-          absolute
-          z-30
-          left-0
-          top-1/2
-          transform
-          -translate-y-1/2 -translate-x-full
-        "
-      ></div>
-      <div class="border rounded-md sm:rounded-xl overflow-hidden">
-        <div class="p-4 sm:p-6">
-          <div class="font-bold sm:text-xl">Play Piano</div>
-          <div class="sm:mt-1 text-gray-500 sm:text-lg">Learning how to play piano.</div>
-          <div class="pt-4 text-sm sm:text-base">
-            <span class="font-medium bg-green-100 text-yellow700 py-1 px-2 rounded-md">Skills</span>
-            <span class="ml-2 text-gray-700">Achieved on 12. Okt 2020</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div
-      class="
-        relative
-        mb-4
-        sm:mb-6
-        transform
-        transition-all
-        translate-y-12
-        ease-out
-        duration-500
-        opacity-0
-      "
-      data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
-    >
-      <div
-        class="
-          w-4
-          sm:w-6
-          md:w-8
-          h-0.5
-          sm:h-1
-          bg-gray-200
-          absolute
-          z-30
-          left-0
-          top-1/2
-          transform
-          -translate-y-1/2 -translate-x-full
-        "
-      ></div>
-      <div class="border rounded-md sm:rounded-xl overflow-hidden">
-        <div>
-          <img
-            src="https://images.unsplash.com/photo-1620325867502-221cfb5faa5f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&ar=2:1&fit=crop&w=1000&q=80"
-          />
-        </div>
-        <div class="p-4 sm:p-6">
-          <div class="font-bold sm:text-xl">Finish Bucket project</div>
-          <div class="sm:mt-1 text-gray-500 sm:text-lg">Make it work already.</div>
-          <div class="pt-4 text-sm sm:text-base">
-            <span class="font-medium bg-red-100 text-red-700 py-1 px-2 rounded-md">Work</span>
-            <span class="ml-2 text-gray-700">3. Dec 2020</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    <component name="timeline-item" props="Play Piano;Learning how to play piano.;green;Skills;12. Okt 2020" />
+    <component name="timeline-item-picture" props="Finish Bucket project;Make it work already;red;Work;03.12.2020;Bucket-project.jpg" />
 </div>
 <script src="/static/timeline.js" defer></script>
