Added and styled the Dashboard buttons and started the next-up item visualization on the Dashboard page.

--- a/src/components/timeline.html
+++ b/src/components/timeline.html
@@ -23,5 +23,5 @@
     <component name="tl-block-year" props="2021" />
     <component name="timeline-item" props="Play Piano;Learning how to play piano.;green;Skills;12. Okt 2020" />
     <component name="timeline-item-picture" props="Finish Bucket project;Make it work already;red;Work;03.12.2020;Bucket-project.jpg" />
+  </div>
 </div>
-<script src="/static/timeline.js" defer></script>
