--- a/src/components/head.html
+++ b/src/components/head.html
@@ -5,4 +5,5 @@
   <title>Bucket</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/static/timeline.js" defer></script>
 </head>
