--- a/src/components/main.html
+++ b/src/components/main.html
@@ -1,4 +1,31 @@
 <main class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
-  <div class="border border-2 p-8 text-center">next bucket items</div>
-  <div class="mt-4 border border-2 p-8 text-center">all items</div>
+  <div class="grid sm:grid-cols-3 gap-x-10 gap-y-4 grid-cols-1 mb-10">
+    <component name="dashboard-button" props="Create New Bucket Item!" />
+    <component name="dashboard-button" props="ToDo Bucket Items" />
+    <component name="dashboard-button" props="Achieved Bucket Items" />
+  </div>
+  <div
+          class="
+        mb-4
+        sm:mb-6
+        transform
+        transition-all
+        translate-y-12
+        ease-out
+        duration-500
+        opacity-0
+      "
+          data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
+  >
+    <div class="border rounded-md sm:rounded-xl overflow-hidden">
+      <div class="p-4 sm:p-6">
+        <div class="font-bold sm:text-xl">{{$0}}</div>
+        <div class="sm:mt-1 text-gray-500 sm:text-lg">{{$1}}</div>
+        <div class="pt-4 text-sm sm:text-base">
+          <span class="font-medium bg-red-100 text-red-700 py-1 px-2 rounded-md">{{$3}}</span>
+          <span class="ml-2 text-gray-700">{{$4}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
