- changed the pagetitle alignment to center - in the main.html I added the title, description, category date and picture of the "next-up bucket item", added matching styling according to the rest of the page

--- a/src/components/main.html
+++ b/src/components/main.html
@@ -17,15 +17,17 @@
       "
           data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
   >
-    <div class="border rounded-md sm:rounded-xl overflow-hidden">
+    <div class="border rounded-md sm:rounded-xl overflow-hidden border-blue-500 shadow-2xl">
+      <img src="/static/Marathon.jpg">
       <div class="p-4 sm:p-6">
-        <div class="font-bold sm:text-xl">{{$0}}</div>
-        <div class="sm:mt-1 text-gray-500 sm:text-lg">{{$1}}</div>
+        <div class="font-bold sm:text-xl">Run a marathon</div>
+        <div class="sm:mt-1 text-gray-500 sm:text-lg">Finishing a full marathon.</div>
         <div class="pt-4 text-sm sm:text-base">
-          <span class="font-medium bg-red-100 text-red-700 py-1 px-2 rounded-md">{{$3}}</span>
-          <span class="ml-2 text-gray-700">{{$4}}</span>
+          <span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span>
+          <span class="ml-2 text-gray-700">12.12.2021</span>
         </div>
       </div>
     </div>
   </div>
 </main>
+
