--- a/src/components/profile.html
+++ b/src/components/profile.html
@@ -1,5 +1,6 @@
 <main class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
-    <div class="border rounded-md sm:rounded-xl overflow-hidden border-blue-500 shadow-2xl grid sm:grid-cols-2 grid-cols-2">
+    <div class="border rounded-md sm:rounded-xl overflow-hidden border-blue-500 shadow-2xl grid sm:grid-cols-2 grid-cols-2
+max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
         <div class="pt-4 text-sm sm:text-base">
             <img src="/static/Marathon.jpg">
         </div>
