finished the "Profile" page with the image issues and added an edit "profile button"; + added a delete and edit button to the "Bucket Items" page, button (edit) has no href yet for possibly opening a pop-up window for editing

--- a/src/components/profile.html
+++ b/src/components/profile.html
@@ -1,19 +1,21 @@
 <main class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
-    <div class="border rounded-md sm:rounded-xl overflow-hidden border-blue-500 shadow-2xl grid sm:grid-cols-2 grid-cols-2
-max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
-        <div class="pt-4 text-sm sm:text-base">
+    <div class="border rounded-md sm:rounded-xl overflow-hidden border-blue-500 shadow-2xl grid sm:grid-cols-2 grid-cols-1
+max-w-5xl mx-auto p-0 sm:px-0 lg:px-0">
+        <div class="flex auto p-0 text-sm sm:text-base">
             <img src="/static/Marathon.jpg">
         </div>
-        <div class="p-4 sm:p-6">
-            <div class="font-bold">bucketlist_user_123</div>
-            <div class="pt-4 text-sm sm:text-base">
-                <span class="font-normal">Bucketlist</span>
-                <span class="ml-2 font-normal">User</span>
+        <div class="bg-blue-100 p-4 sm:p-6">
+            <div class="pb-4 font-bold">bucketlist_user_123</div>
+            <div class="text-sm sm:text-base">
+                <span class="font-normal">Name</span>
+                <span class="ml-2 font-normal">Surname</span>
             </div>
             <div class="font-normal">20.20.2020</div>
             <div class="font-normal color-blue-500">male</div>
             <div class="font-normal">bucketlistuser@gmail.com</div>
-            <div class="font-normal">sfhllfkj wfhflhfl fjrlfjerlih fjlgi g.</div>
+            <div class="pb-4 font-normal">sfhllfkj wfhflhfl fjrlfjerlih fjlgi g.</div>
+            <button class="border-2 px-2 border-yellow-500 border-solid rounded-lg dark:md:hover:bg-yellow-100
+            font-semibold text-center">edit profile</button>
         </div>
     </div>
 </main>
