--- a/src/components/list.html
+++ b/src/components/list.html
@@ -1,14 +1,26 @@
 <main class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
-    <ul class="list-disc">
-        <li class="font-bold sm:text-xl space-x-4">
-            <span>Run a Marathon</span>
-            <span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span>
-            <span class="font-medium text-gray-700"> 12.12.2021</span>
+    <ul class="list-none">
+        <li class="font-bold sm:text-xl space-x-4 grid grid-cols-4">
+            <span class="text-center">Run a Marathon</span>
+            <span class="flex justify-center"><span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span></span>
+            <span class="text-center font-medium text-gray-700"> 12.12.2021</span>
+            <span class="space-x-4">
+                <button class="border-2 px-2 border-red-500 border-solid rounded-lg dark:md:hover:bg-red-100
+                font-semibold text-center">delete</button>
+                <button class="border-2 px-2 border-yellow-500 border-solid rounded-lg dark:md:hover:bg-yellow-100
+                font-semibold text-center">edit</button>
+            </span>
         </li>
-        <li class="font-bold sm:text-xl space-x-4">
-            <span>Run a Marathon</span>
-            <span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span>
-            <span class="font-medium text-gray-700"> 12.12.2021</span>
+        <li class="font-bold sm:text-xl space-x-4 grid grid-cols-4">
+            <span class="text-center">Run a Marathon</span>
+            <span class="flex justify-center"><span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span></span></span>
+            <span class="text-center font-medium text-gray-700"> 12.12.2021</span>
+            <span class="space-x-4">
+                <button class="border-2 px-2 border-red-500 border-solid rounded-lg dark:md:hover:bg-red-100
+                font-semibold text-center">delete</button>
+                <button class="border-2 px-2 border-yellow-500 border-solid rounded-lg dark:md:hover:bg-yellow-100
+                font-semibold text-center">edit</button>
+            </span>
         </li>
     </ul>
 </main>
