--- a/src/components/dashboard-button.html
+++ b/src/components/dashboard-button.html
@@ -1,2 +1,5 @@
-<a class="border-4 p-4 border-blue-500 border-double shadow-2xl rounded-lg
- dark:md:hover:bg-blue-100 font-semibold text-center" href="/{{$1}}.html">{{$0}}</a>
+<a
+  class="border p-4 border-slate-300 shadow-sm rounded-lg dark:md:hover:bg-slate-50 font-semibold text-center"
+  href="/{{$1}}.html"
+  >{{$0}}</a
+>
