--- a/src/components/head.html
+++ b/src/components/head.html
@@ -4,6 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bucket</title>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   <script src="/static/timeline.js" defer></script>
 </head>
