Change gray to slate

--- a/src/components/list.html
+++ b/src/components/list.html
@@ -3,7 +3,7 @@
         <li class="font-bold sm:text-xl space-x-4 grid grid-cols-4">
             <span class="text-center">Run a Marathon</span>
             <span class="flex justify-center"><span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span></span>
-            <span class="text-center font-medium text-gray-700"> 12.12.2021</span>
+            <span class="text-center font-medium text-slate-700"> 12.12.2021</span>
             <span class="space-x-4">
                 <button class="border-2 px-2 border-red-500 border-solid rounded-lg dark:md:hover:bg-red-100
                 font-semibold text-center">delete</button>
@@ -14,7 +14,7 @@
         <li class="font-bold sm:text-xl space-x-4 grid grid-cols-4">
             <span class="text-center">Run a Marathon</span>
             <span class="flex justify-center"><span class="font-medium bg-yellow-100 text-yellow-700 py-1 px-2 rounded-md">Fitness</span></span></span>
-            <span class="text-center font-medium text-gray-700"> 12.12.2021</span>
+            <span class="text-center font-medium text-slate-700"> 12.12.2021</span>
             <span class="space-x-4">
                 <button class="border-2 px-2 border-red-500 border-solid rounded-lg dark:md:hover:bg-red-100
                 font-semibold text-center">delete</button>
