--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -1,16 +1,5 @@
 <nav
-  class="
-    fixed
-    bottom-0
-    sm:top-0
-    left-0
-    h-16
-    w-screen
-    bg-white
-    border-t
-    sm:border-t-0 sm:border-b
-    z-40
-  "
+  class="fixed bottom-0 sm:top-0 left-0 h-16 w-screen bg-white border-t sm:border-t-0 sm:border-b z-40"
 >
   <div class="max-w-5xl mx-auto h-full px-2 sm:px-6 lg:px-8">
     <!-- desktop nav -->
@@ -27,16 +16,7 @@
           <component name="nav-item{{$2}}" props="profile;Profile" />
           <a
             href="logout.html"
-            class="
-              text-gray-500
-              hover:text-gray-700
-              inline-flex
-              items-center
-              px-1
-              pt-1
-              text-sm
-              font-medium
-            "
+            class="text-slate-500 hover:text-slate-700 inline-flex items-center px-1 pt-1 text-sm font-medium"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
