--- a/src/components/timeline.html
+++ b/src/components/timeline.html
@@ -1,27 +1,27 @@
 <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 mt-8">
   <div class="relative border-l-2 sm:border-l-4 pl-4 sm:pl-6 md:pl-8 pb-4 sm:pb-6 box-border">
     <div
-      class="
-        absolute
-        top-0
-        -left-0.5
-        w-8
-        h-3
-        transform
-        -translate-x-1/2 -translate-y-1
-        overflow-hidden
-        flex
-        justify-center
-        items-start
-      "
+      class="absolute top-0 -left-0.5 w-8 h-3 transform -translate-x-1/2 -translate-y-1 overflow-hidden flex justify-center items-start"
     >
-      <div class="w-4 h-4 bg-gray-200 transform rotate-45 translate-y-1 rounded"></div>
+      <div class="w-4 h-4 bg-slate-200 transform rotate-45 translate-y-1 rounded"></div>
     </div>
     <component name="tl-block-year" props="Today" />
-    <component name="timeline-item-picture" props="Run a marathon;Finishing a full marathon;yellow;Fitness;12.12.2021;Marathon.jpg" />
-    <component name="timeline-item" props="Visit the Himalaya;Go to Nepal and see the mountains;blue;Travel;24. Sept 2021" />
+    <component
+      name="timeline-item-picture"
+      props="Run a marathon;Finishing a full marathon;yellow;Fitness;12.12.2021;Marathon.jpg"
+    />
+    <component
+      name="timeline-item"
+      props="Visit the Himalaya;Go to Nepal and see the mountains;blue;Travel;24. Sept 2021"
+    />
     <component name="tl-block-year" props="2021" />
-    <component name="timeline-item" props="Play Piano;Learning how to play piano.;green;Skills;12. Okt 2020" />
-    <component name="timeline-item-picture" props="Finish Bucket project;Make it work already;red;Work;03.12.2020;Bucket-project.jpg" />
+    <component
+      name="timeline-item"
+      props="Play Piano;Learning how to play piano.;green;Skills;12. Okt 2020"
+    />
+    <component
+      name="timeline-item-picture"
+      props="Finish Bucket project;Make it work already;red;Work;03.12.2020;Bucket-project.jpg"
+    />
   </div>
 </div>
