--- a/src/components/tl-block-year.html
+++ b/src/components/tl-block-year.html
@@ -1,34 +1,11 @@
 <div
-  class="
-    relative
-    mb-4
-    sm:mb-6
-    transform
-    transition-all
-    translate-y-12
-    ease-out
-    duration-500
-    opacity-0
-  "
+  class="relative mb-4 sm:mb-6 transform transition-all translate-y-12 ease-out duration-500 opacity-0"
   data-replace='{"translate-y-12": "translate-y-0", "opacity-0": "opacity-100"}'
 >
   <div
-    class="
-      w-4
-      sm:w-6
-      md:w-8
-      h-0.5
-      sm:h-1
-      bg-gray-200
-      absolute
-      z-30
-      left-0
-      top-1/2
-      transform
-      -translate-y-1/2 -translate-x-full
-    "
+    class="w-4 sm:w-6 md:w-8 h-0.5 sm:h-1 bg-slate-200 absolute z-30 left-0 top-1/2 transform -translate-y-1/2 -translate-x-full"
   ></div>
   <div class="p-4 sm:p-6">
-    <div class="text-xl sm:text-2xl text-gray-700 font-bold">{{$0}}</div>
+    <div class="text-xl sm:text-2xl text-slate-700 font-bold">{{$0}}</div>
   </div>
 </div>
