Add profile-edit form

--- a/src/components/form-item-create.html
+++ b/src/components/form-item-create.html
@@ -7,7 +7,7 @@
   <component name="input-select" props="bucket;Bucket;" />
   <component name="input-text" props="date;date-to-accomplish;Date to accomplish;;Optional" />
   <div class="flex gap-x-3">
-    <component name="button" props="Cancel" />
-    <component name="button-primary" props="Create" />
+    <component name="button" props="Cancel;index" />
+    <component name="button-primary" props="Create;index" />
   </div>
 </main>
