--- a/src/components/dashboard-button.html
+++ b/src/components/dashboard-button.html
@@ -1,5 +1,5 @@
 <a
   class="border p-4 border-slate-300 shadow-sm rounded-lg dark:md:hover:bg-slate-50 font-semibold text-center"
-  href="/{{$1}}.html"
+  href="/{{$1}}"
   >{{$0}}</a
 >
