--- a/src/components/nav-item.html
+++ b/src/components/nav-item.html
@@ -1,5 +1,5 @@
 <a
-  href="{{$0}}.html"
+  href="/{{$0}}"
   class="group relative text-slate-500 hover:text-slate-700 inline-flex items-center px-1 pt-1 text-sm font-medium transition ease-in-out duration-100"
 >
   <div
