--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -7,11 +7,11 @@
       <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-between">
         <div class="flex flex-shrink-0 items-center">
           <div class="font-bold text-blue-500 text-lg">
-            <a href="index.html">BUCKET</a>
+            <a href="/">BUCKET</a>
           </div>
         </div>
         <div class="flex sm:space-x-8">
-          <component name="nav-item{{$0}}" props="index;Dashboard" />
+          <component name="nav-item{{$0}}" props=";Dashboard" />
           <component name="nav-item{{$1}}" props="timeline;Timeline" />
           <component name="nav-item{{$2}}" props="profile;Profile" />
           <a
@@ -42,7 +42,7 @@
     </div>
     <!-- mobile nav -->
     <div class="flex sm:hidden h-full flex-1 items-stretch justify-stretch">
-      <a class="inline-flex flex-1 items-center justify-center {{$3}}" href="index.html">
+      <a class="inline-flex flex-1 items-center justify-center {{$3}}" href="/">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="icon icon-tabler icon-tabler-home-2"
@@ -61,7 +61,7 @@
           <rect x="10" y="12" width="4" height="4"></rect>
         </svg>
       </a>
-      <a class="inline-flex flex-1 items-center justify-center {{$4}}" href="timeline.html">
+      <a class="inline-flex flex-1 items-center justify-center {{$4}}" href="/timeline">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="icon icon-tabler icon-tabler-directions"
@@ -82,7 +82,7 @@
           <line x1="12" y1="5" x2="12" y2="3"></line>
         </svg>
       </a>
-      <a class="inline-flex flex-1 items-center justify-center {{$5}}" href="profile.html">
+      <a class="inline-flex flex-1 items-center justify-center {{$5}}" href="/profile">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="icon icon-tabler icon-tabler-user"
