--- a/src/components/main.html
+++ b/src/components/main.html
@@ -1,6 +1,6 @@
 <main class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8">
   <div class="grid sm:grid-cols-3 gap-x-10 gap-y-4 grid-cols-1 mb-10">
-    <component name="dashboard-button" props="Create;create-item" />
+    <component name="dashboard-button" props="Create;item/create" />
     <component name="dashboard-button" props="Open;list" />
     <component name="dashboard-button" props="Achieved;list" />
   </div>
