--- a/src/components/form-profile-edit.html
+++ b/src/components/form-profile-edit.html
@@ -4,6 +4,6 @@
   <component name="input-text" props="password;password;Password;;" />
   <div class="flex gap-x-3">
     <component name="button" props="Cancel;profile" />
-    <component name="button-primary" props="Update;profile" />
+    <component name="button-submit" props="Update;profile" />
   </div>
 </main>
