--- a/src/components/input-text.html
+++ b/src/components/input-text.html
@@ -1,16 +1,35 @@
 <div class="max-w-sm mb-8 last:mb-0">
   <div class="flex justify-between">
-    <label for="{{$1}}" class="block text-sm font-medium text-slate-700">{{$2}}</label>
+    <label for="{{$1}}" class="block text-sm font-medium text-slate-700"
+      >{{$2}}</label
+    >
     <span class="text-sm text-slate-500" id="{{$1}}-optional">{{$4}}</span>
   </div>
-  <div class="mt-1">
+  <div class="mt-1" id="{{$1}}-error-parent">
     <input
       type="{{$0}}"
       name="{{$1}}"
       id="{{$1}}"
       class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-slate-300 rounded-md"
       placeholder="{{$3}}"
-      aria-describedby="{{$1}}-optional"
     />
+    <div
+      class="hidden absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
+      id="{{$1}}-error-icon"
+    >
+      <svg
+        class="h-5 w-5 text-red-500"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
+          clip-rule="evenodd"
+        />
+      </svg>
+    </div>
   </div>
+  <p class="hidden mt-2 text-sm text-red-600" id="{{$1}}-error"></p>
 </div>
