--- a/src/components/nav-item-active.html
+++ b/src/components/nav-item-active.html
@@ -1,5 +1,5 @@
 <a
-  href="{{$0}}.html"
+  href="{{$0}}"
   class="relative text-slate-900 inline-flex items-center px-1 pt-1 text-sm font-medium"
 >
   <div
