--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -9,11 +9,11 @@
       >
         <div class="flex flex-shrink-0 items-center">
           <div class="font-bold text-blue-500 text-lg">
-            <a href="/">BUCKET</a>
+            <a href="/dashboard">BUCKET</a>
           </div>
         </div>
         <div class="flex sm:space-x-8">
-          <component name="nav-item{{$0}}" props=";Dashboard" />
+          <component name="nav-item{{$0}}" props="dashboard;Dashboard" />
           <component name="nav-item{{$1}}" props="timeline;Timeline" />
           <component name="nav-item{{$2}}" props="profile;Profile" />
           <a
@@ -44,7 +44,10 @@
     </div>
     <!-- mobile nav -->
     <div class="flex sm:hidden h-full flex-1 items-stretch justify-stretch">
-      <a class="inline-flex flex-1 items-center justify-center {{$3}}" href="/">
+      <a
+        class="inline-flex flex-1 items-center justify-center {{$3}}"
+        href="/dashboard"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="icon icon-tabler icon-tabler-home-2"
