--- a/src/components/input-select.html
+++ b/src/components/input-select.html
@@ -9,7 +9,7 @@
     <select
       id="{{$0}}"
       name="{{$0}}"
-      class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-slate-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md"
+      class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-slate-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md text-slate-500"
     ></select>
     <div
       class="hidden absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
