--- a/src/components/button.html
+++ b/src/components/button.html
@@ -1,6 +1,8 @@
 <a
   href="/{{$1}}"
-  class="inline-flex items-center px-4 py-2 border border-slate-300 shadow-sm text-sm font-medium rounded-md text-slate-700 bg-white hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+  id="{{$2}}"
+  data-{{$2}}
+  class="inline-flex items-center px-4 py-2 border border-slate-300 shadow-sm text-sm font-medium rounded-md text-slate-700 bg-white hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 justify-center sm:justify-start cursor-pointer"
 >
   {{$0}}
 </a>
