--- a/src/components/button-submit.html
+++ b/src/components/button-submit.html
@@ -1,7 +1,7 @@
 <button
   id="submit"
   type="submit"
-  class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-slate-600 bg-slate-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-500 cursor-default"
+  class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-slate-600 bg-slate-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-500 cursor-pointer"
 >
   {{$0}}
 </button>
