--- a/src/components/foot.html
+++ b/src/components/foot.html
@@ -1,6 +1,4 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="../assets/js/app.js"></script>
-<script src="../assets/js/script.js"></script>
-<script src="../assets/js/webapp.js"></script>
-<script src="../assets/js/utility.js"></script>
-<script src="../assets/js/timeline.js"></script>
+<script src="/assets/js/lib.js"></script>
+<script src="/assets/js/api.js"></script>
+<script src="/assets/js/webapp.js"></script>
+<script src="/assets/js/timeline.js"></script>
