--- a/src/components/head.html
+++ b/src/components/head.html
@@ -3,6 +3,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bucket</title>
-
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/@tabler/icons@1.51.0/iconfont/tabler-icons.min.css"
+  />
   <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
 </head>
