--- a/src/components/input-file.html
+++ b/src/components/input-file.html
@@ -11,7 +11,7 @@
         <input
           id="{{$0}}"
           name="{{$0}}"
-          class="form-control block w-full px-2 py-1 text-sm font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 transition ease-in-out m-0 focus:bg-white focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md"
+          class="form-control block w-full px-2 py-1 text-sm font-normal text-slate-700 bg-white bg-clip-padding border border-solid border-slate-300 transition ease-in-out m-0 focus:bg-white focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md"
           type="file"
           accept="image/png, image/jpeg"
         />
@@ -22,18 +22,7 @@
       class="hidden absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
       id="{{$0}}-error-icon"
     >
-      <svg
-        class="h-5 w-5 text-red-500"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 20 20"
-        fill="currentColor"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
-          clip-rule="evenodd"
-        />
-      </svg>
+      <i class="ti ti-alert-circle text-red-500 text-xl"></i>
     </div>
   </div>
 
