--- a/src/components/head.html
+++ b/src/components/head.html
@@ -9,4 +9,15 @@
     href="https://unpkg.com/@tabler/icons@1.51.0/iconfont/tabler-icons.min.css"
   />
   <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          gridTemplateColumns: {
+            15: 'repeat(15, minmax(0, 1fr))',
+          },
+        },
+      },
+    };
+  </script>
 </head>
