Add new buttons
- Add button-edit
- Add button-delete
- Add button-icon
- Adjust max-w

--- a/src/components/button-delete.html
+++ b/src/components/button-delete.html
@@ -1,7 +1,7 @@
 <a
   id="{{$2}}"
   data-{{$2}}
-  class="inline-flex items-center px-4 py-2 border border-red-300 shadow-sm text-sm font-medium rounded-md text-red-700 bg-red-50 hover:bg-red-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 justify-center sm:justify-start cursor-pointer"
+  class="inline-flex items-center px-2 py-2 border border-red-300 shadow-sm text-sm font-medium rounded-md text-red-700 bg-red-50 hover:bg-red-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 justify-center sm:justify-start cursor-pointer"
 >
-  {{$0}}
+  <i class="ti ti-trash"></i>
 </a>
