--- a/src/components/pagetitle.html
+++ b/src/components/pagetitle.html
@@ -1,3 +1,6 @@
-<div class="max-w-5xl mx-auto p-4 sm:px-6 lg:px-8 pt-10 pb-4">
-  <h1 class="text-2xl sm:text-3xl font-bold text-center">{{$0}}</h1>
+<div
+  class="max-w-7xl mx-auto p-4 sm:px-6 lg:px-8 pt-10 pb-4 flex justify-between"
+  id="pagetitle"
+>
+  <h1 class="text-2xl sm:text-3xl font-bold">{{$0}}</h1>
 </div>
