--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -1,15 +1,21 @@
 <nav
   class="fixed bottom-0 sm:top-0 left-0 h-16 w-screen bg-white border-t sm:border-t-0 sm:border-b z-30"
 >
-  <div class="max-w-7xl mx-auto h-full px-2 sm:px-6 lg:px-8">
+  <div class="max-w-7xl mx-auto h-full px-4 sm:px-6 lg:px-8">
     <!-- desktop nav -->
     <div class="hidden relative sm:flex justify-between h-full">
       <div
         class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-between"
       >
         <div class="flex flex-shrink-0 items-center">
-          <div class="font-bold text-blue-500 text-lg">
-            <a href="/dashboard">BUCKET</a>
+          <div class="font-bold text-xl text-slate-800">
+            <a href="/dashboard" class="flex items-center gap-x-2"
+              ><i
+                id="bucket-logo"
+                class="ti ti-bucket text-3xl text-teal-500 pb-1"
+              ></i
+              >Bucket</a
+            >
           </div>
         </div>
         <div class="flex sm:space-x-8">
