--- a/src/components/head.html
+++ b/src/components/head.html
@@ -14,6 +14,7 @@
       theme: {
         extend: {
           gridTemplateColumns: {
+            13: 'repeat(13, minmax(0, 1fr))',
             15: 'repeat(15, minmax(0, 1fr))',
           },
         },
