--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -1,5 +1,5 @@
 <nav
-  class="fixed bottom-0 sm:top-0 left-0 h-16 w-screen bg-white border-t sm:border-t-0 sm:border-b z-30"
+  class="fixed w-full bottom-0 sm:top-0 left-0 h-16 bg-white border-t sm:border-t-0 sm:border-b z-30"
 >
   <div class="max-w-7xl mx-auto h-full px-4 sm:px-6 lg:px-8">
     <!-- desktop nav -->
