--- a/src/components/input-file.html
+++ b/src/components/input-file.html
@@ -7,7 +7,7 @@
   </div>
   <div class="mt-1" id="{{$0}}-error-parent">
     <div class="flex justify-center">
-      <div class="mb-3 w-96">
+      <div class="mb-2 w-96">
         <input
           id="{{$0}}"
           name="{{$0}}"
@@ -17,14 +17,6 @@
         />
       </div>
     </div>
-
-    <div
-      class="hidden absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
-      id="{{$0}}-error-icon"
-    >
-      <i class="ti ti-alert-circle text-red-500 text-xl"></i>
-    </div>
   </div>
-
-  <p class="hidden mt-2 text-sm text-red-600" id="{{$0}}-error"></p>
+  <p class="text-sm text-slate-600">{{$3}}</p>
 </div>
