Change to production css bundle

--- a/src/components/head.html
+++ b/src/components/head.html
@@ -8,17 +8,5 @@
     rel="stylesheet"
     href="https://unpkg.com/@tabler/icons@1.51.0/iconfont/tabler-icons.min.css"
   />
-  <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          gridTemplateColumns: {
-            13: 'repeat(13, minmax(0, 1fr))',
-            15: 'repeat(15, minmax(0, 1fr))',
-          },
-        },
-      },
-    };
-  </script>
+  <link rel="stylesheet" href="/assets/css/bundle.css" />
 </head>
